# solar-storms

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: build-docker-image.yml  install-and-test.yml
solar_storms/: __init__.py  data_pipeline.py  database.py  noaa_dscovr.py  rest_api.py  routes.py  schema.sql
test/: test.db  test.py
